# DoseDynamics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  dev.yaml
docs/: architecture.md
notebooks/: .gitkeep
scripts/: run_pipeline.py
src/dosedynamics/: cli.py  config.py  logging.py  pipeline.py
src/dosedynamics/analysis/: arrest.py  arrest_analysis.py  center_crossings.py  dispersion.py  features.py  speed_bins.py  speed_distance.py  stats.py  tca.py  tca_per_animal.py  thigmotaxis.py
src/dosedynamics/io/: loaders.py  savers.py
src/dosedynamics/plotting/: arrest.py  center_crossings.py  dispersion.py  speed_bins.py  speed_distance.py  tca.py  thigmotaxis.py
src/dosedynamics/preprocessing/: arena.py  arena_points.py  assemble.py  bodypart.py  mec.py  transform.py
src/dosedynamics/utils/: paths.py
tests/: test_arrest_analysis.py  test_center_crossings.py  test_config.py  test_dispersion.py  test_features.py  test_thigmotaxis.py
